overflow hidden on hero carousel to stop breaking view on android

--- a/public/scss/_hero.scss
+++ b/public/scss/_hero.scss
@@ -23,8 +23,7 @@
 }
 
 .carousel {
-	// max-width: 100vw - 244px;
-
+	overflow: hidden;
 	position: relative;
 	top: 36px;
 	button {
