--- a/public/styles.css
+++ b/public/styles.css
@@ -104,6 +104,7 @@ legend {
 }
 
 .carousel {
+  overflow: hidden;
   position: relative;
   top: 36px;
   height: calc(100vh - 182px);
